--- a/first.html
+++ b/first.html
@@ -1,9 +1,26 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-
-    <title>Hi html</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>홈페이지 예시</title>
 </head>
+<body>
+    <h1>안녕하세요! 환영합니다!</h1>
+    <p>이곳은 기본적인 홈페이지 예시입니다.</p>
 
+    <h2>사진</h2>
+    <img src="image1.jpg" alt="첫 번째 사진" width="500">
+    <img src="image2.jpg" alt="두 번째 사진" width="500">
+
+    <h2>동영상</h2>
+    <video width="640" height="480" controls>
+        <source src="movie.mp4" type="video/mp4">
+        브라우저가 동영상을 지원하지 않습니다.
+    </video>
+
+    <footer>
+        <p>© 2024 홈페이지. 모든 권리 보유.</p>
+    </footer>
+</body>
 </html>
