--- a/first.html
+++ b/first.html
@@ -6,8 +6,8 @@
     <title>홈페이지 예시</title>
 </head>
 <body>
-    <h1>안녕하세요! 환영합니다!</h1>
-    <p>이곳은 기본적인 홈페이지 예시입니다.</p>
+    <h1>안녕하세요! 모바일시스템공학과 20학번 임석범입니다!</h1>
+    <p>이곳은 제 소개가 들어간 사이트 입니다.</p>
 
     <h2>사진</h2>
     <img src="image1.jpg" alt="첫 번째 사진" width="500">
