--- a/first.html
+++ b/first.html
@@ -12,6 +12,8 @@
     <h2>사진</h2>
     <img src="image1.jpg" alt="첫 번째 사진" width="500">
     <img src="image2.jpg" alt="두 번째 사진" width="500">
+    <p>저는 열정적이고 창의적인 것을 좋아하며, 다양한 경험을 통해 탁월한 문제 해결능력과 협업능력을 갖추기를 바랍니다.</p>
+    <p>많은 사람들과 열정적으로 새로운 도전을 받아드리고 배움을 통해 발전하길 원합니다.</p>
 
     <h2>동영상</h2>
     <video width="640" height="480" controls>
