--- a/first.html
+++ b/first.html
@@ -14,6 +14,8 @@
     <img src="image2.jpg" alt="두 번째 사진" width="500">
     <p>저는 열정적이고 창의적인 것을 좋아하며, 다양한 경험을 통해 탁월한 문제 해결능력과 협업능력을 갖추기를 바랍니다.</p>
     <p>많은 사람들과 열정적으로 새로운 도전을 받아드리고 배움을 통해 발전하길 원합니다.</p>
+    <p>이 분야에 대해 열심히 배워 실질적인 성과를 내고 제 능력을 입증하는 날이 왔으면 좋겠습니다.</p>
+    <p>제가 즐겨하는 취미는 스키입니다.</p>
 
     <h2>동영상</h2>
     <video width="640" height="480" controls>
