--- a/first.html
+++ b/first.html
@@ -22,9 +22,10 @@
         <source src="movie.mp4" type="video/mp4">
         브라우저가 동영상을 지원하지 않습니다.
     </video>
+    <p> 저는 세상을 돌아다니는 것을 좋아 합니다.</p>
 
     <footer>
-        <p>© 2024 홈페이지. 모든 권리 보유.</p>
+        <p> 2024 Open Source Midterm 임석범.</p>
     </footer>
 </body>
 </html>
