--- a/first.html
+++ b/first.html
@@ -22,7 +22,7 @@
         <source src="movie.mp4" type="video/mp4">
         브라우저가 동영상을 지원하지 않습니다.
     </video>
-    <p> 저는 세상을 돌아다니는 것을 좋아 합니다.</p>
+    <p> 저는 세상을 돌아다니는 것을 좋아 합니다. 세상을 돌아다니며 얻을 수 있는 경험은 일이나 학문을 배우는 것과 다른 영역 입니다.</p>
 
     <footer>
         <p> 2024 Open Source Midterm 임석범.</p>
