--- a/first.html
+++ b/first.html
@@ -23,6 +23,7 @@
         브라우저가 동영상을 지원하지 않습니다.
     </video>
     <p> 저는 세상을 돌아다니는 것을 좋아 합니다. 세상을 돌아다니며 얻을 수 있는 경험은 일이나 학문을 배우는 것과 다른 영역 입니다.</p>
+    <p> 세상을 돌아다니면서 얻을 수 있는 경험은 좁은 세상을 보던 시야가 넓은 식견으로 확장 될것입니다.</p>
 
     <footer>
         <p> 2024 Open Source Midterm 임석범.</p>
