--- a/first.html
+++ b/first.html
@@ -27,6 +27,7 @@
 
     <h2>사진</h2>
     <img src="image3.jpg" alt="세 번째 사진" width="500">
+    <p> 마지막으로 제가 관심있는 분야는 패션 분야 입니다.</p>
 
     <footer>
         <p> 2024 Open Source Midterm 임석범.</p>
