--- a/first.html
+++ b/first.html
@@ -29,6 +29,7 @@
     <img src="image3.jpg" alt="세 번째 사진" width="500">
     <p> 마지막으로 제가 관심있는 분야는 패션 분야 입니다.</p>
     <p> 패션과 디자인에 대한 감각은 사람의 가치관을 나타 낼 수 있습니다.</p>
+    <p> apple의 유명 ceo 였던 스티브 잡스 또한 디자인에 대한 철학을 Iphone에 담았고, 그러한 그의 철학은 성공의 신화를 만들어 냈습니다.</p>
 
     <footer>
         <p> 2024 Open Source Midterm 임석범.</p>
