--- a/first.html
+++ b/first.html
@@ -30,6 +30,7 @@
     <p> 마지막으로 제가 관심있는 분야는 패션 분야 입니다.</p>
     <p> 패션과 디자인에 대한 감각은 사람의 가치관을 나타 낼 수 있습니다.</p>
     <p> apple의 유명 ceo 였던 스티브 잡스 또한 디자인에 대한 철학을 Iphone에 담았고, 그러한 그의 철학은 성공의 신화를 만들어 냈습니다.</p>
+    <p> 패션과 디자인에 대한 감각을 길러 저만의 철학이 성공으로 이끌었으면 좋겠습니다.</p>
 
     <footer>
         <p> 2024 Open Source Midterm 임석범.</p>
